[build-system]
requires = ["maturin>=0.13,<0.14"]
build-backend = "maturin"

[project]
name = "shazam.py"
description = "Shazam API wrapper"
license = {text = "MIT"}
version = "1.0.0"
authors = [
    {name = "Middledot", email = "middledot.productions@gmail.com"}
]
readme = "README.md"
repository = "https://github.com/Middledot/shazam.py"
requires-python = ">=3.7"
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: MIT License",
    "Intended Audience :: Developers",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Topic :: Internet",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = ["maturin==0.13.5", "aiohttp==3.9.0", "requests==2.28.1"]

[project.urls]
Homepage = "https://github.com/Middledot/shazam.py"
Tracker = "https://github.com/Middledot/shazam.py/issues"
